# cocso-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SOUL.md  batch_runner.py  cli-config.yaml.example  cocso  docker-compose.yml  mini_swe_runner.py  package-lock.json  package.json  pyproject.toml  setup-cocso.sh  toolset_distributions.py
.github/workflows/: docker.yml  test.yml
acp_adapter/: __init__.py  auth.py  entry.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: __init__.py  account_usage.py  anthropic_adapter.py  auxiliary_client.py  codex_responses_adapter.py  context_compressor.py  context_engine.py  context_references.py  credential_pool.py  credential_sources.py  curator.py  display.py  file_safety.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  onboarding.py  prompt_builder.py  rate_limit_tracker.py  redact.py  shell_hooks.py  skill_commands.py  skill_preprocessing.py  skill_utils.py  usage_pricing.py
agent/transports/: __init__.py  chat_completions.py  codex.py
cocso_cli/: __init__.py  _parser.py  auth.py  auth_commands.py  backup.py  banner.py  branding.py  browser_connect.py  callbacks.py  chat.py  cli_output.py  clipboard.py  colors.py  commands.py  completion.py  config.py  copilot_auth.py  cron.py  curator.py  curses_ui.py  debug.py  default_soul.py  doctor.py  dump.py  env_loader.py  fallback_cmd.py  gateway.py  hooks.py  kanban.py  kanban_db.py  logs.py  main.py  mcp_config.py  mcp_serve.py  memory_setup.py  model_normalize.py  model_switch.py  models.py  oneshot.py  pairing.py  (+20 more)
cocso_core/: __init__.py  cocso_constants.py  cocso_logging.py  cocso_state.py  cocso_time.py  model_tools.py  secrets.py  toolsets.py  utils.py
cron/: __init__.py  jobs.py  scheduler.py
docker/: entrypoint.sh
docs/: MULTI-COMPANY.md
excel/: COCSO 표준 의약품 정산 수수료 내역서.xlsx
gateway/: __init__.py  channel_directory.py  config.py  delivery.py  display_config.py  hooks.py  mirror.py  pairing.py  platform_registry.py  restart.py  run.py  runtime_footer.py  session.py  session_context.py  status.py  sticker_cache.py  stream_consumer.py  whatsapp_identity.py
plugins/: __init__.py
scripts/: build_skills_index.py  contributor_audit.py  install.cmd  install.ps1  install.sh  release.py  run_tests.sh
tests/: conftest.py  test_secrets.py
tools/: __init__.py  approval.py  browser_camofox.py  browser_camofox_state.py  browser_cdp_tool.py  browser_supervisor.py  browser_tool.py  budget_config.py  checkpoint_manager.py  code_execution_tool.py  credential_files.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  discord_tool.py  env_passthrough.py  file_operations.py  file_state.py  file_tools.py  interrupt.py  kanban_tools.py  mcp_oauth.py  mcp_oauth_manager.py  mcp_tool.py  memory_tool.py  osv_check.py  process_registry.py  registry.py  send_message_tool.py  session_search_tool.py  skill_manager_tool.py  skill_usage.py  skills_guard.py  skills_hub.py  skills_sync.py  skills_tool.py  terminal_tool.py  tirith_security.py  tool_backend_helpers.py  tool_output_limits.py  (+5 more)
(+45 files in other folders)
