[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cocso-agent"
version = "0.1.4"
description = "COCSO Agent — a lean personal assistant for Discord, Slack, Telegram, CLI, and optional MCP"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jeonhui Lee", email = "johnny@cocso.ai" }]
license = { text = "MIT" }
dependencies = [
  # Core — pinned to known-good ranges to limit supply chain attack surface
  "openai>=2.21.0,<3",
  "anthropic>=0.39.0,<1",
  "python-dotenv>=1.2.1,<2",
  "fire>=0.7.1,<1",
  "httpx[socks]>=0.28.1,<1",
  "rich>=14.3.3,<15",
  "tenacity>=9.1.4,<10",
  "pyyaml>=6.0.2,<7",
  "requests>=2.33.0,<3",  # CVE-2026-25645
  "jinja2>=3.1.5,<4",
  "pydantic>=2.12.5,<3",
  # Interactive CLI (prompt_toolkit is used directly by cli.py)
  "prompt_toolkit>=3.0.52,<4",
  # Tools
  # Cron scheduler (built-in feature — scheduled cron/interval jobs use croniter).
  "croniter>=6.0.0,<7",
  # Skills Hub (GitHub App JWT auth — optional, only needed for bot identity)
  "PyJWT[crypto]>=2.12.0,<3",  # CVE-2026-32597
]

[project.urls]
Homepage = "https://github.com/cocso/cocso-agent"
Repository = "https://github.com/cocso/cocso-agent"

[project.optional-dependencies]
dev = ["debugpy>=1.8.0,<2", "pytest>=9.0.2,<10", "pytest-asyncio>=1.3.0,<2", "pytest-xdist>=3.0,<4", "mcp>=1.2.0,<2", "ty>=0.0.1a29,<0.0.22", "ruff"]
# Messaging platforms — Discord, Slack, Telegram only.
messaging = [
  "discord.py>=2.7.1,<3",
  "slack-bolt>=1.18.0,<2",
  "slack-sdk>=3.27.0,<4",
  "python-telegram-bot[webhooks]>=22.6,<23",
  "aiohttp>=3.13.3,<4",
]
cli = ["simple-term-menu>=1.0,<2"]
pty = [
  "ptyprocess>=0.7.0,<1; sys_platform != 'win32'",
  "pywinpty>=2.0.0,<3; sys_platform == 'win32'",
]
mcp = ["mcp>=1.2.0,<2"]
acp = ["agent-client-protocol>=0.9.0,<1.0"]
termux = [
  "python-telegram-bot[webhooks]>=22.6,<23",
  "cocso-agent[cli]",
  "cocso-agent[pty]",
  "cocso-agent[mcp]",
]
all = [
  "cocso-agent[messaging]",
  "cocso-agent[cli]",
  "cocso-agent[pty]",
  "cocso-agent[mcp]",
  "cocso-agent[acp]",
]

[project.scripts]
cocso = "cocso_cli.main:main"
cocso-agent = "cocso_cli.run_agent:main"
cocso-acp = "acp_adapter.entry:main"

[tool.setuptools]
py-modules = ["batch_runner", "mini_swe_runner", "toolset_distributions"]

[tool.setuptools.packages.find]
include = ["agent", "agent.*", "tools", "tools.*", "cocso_cli", "cocso_core", "gateway", "gateway.*", "cron", "acp_adapter", "plugins", "plugins.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (API keys, network, Docker, etc.)",
]
addopts = "-m 'not integration' -n auto"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unknown-argument = "warn"
redundant-cast = "ignore"

[tool.ty.src]
exclude = ["**"]

[[tool.ty.overrides]]
include = ["**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
not-iterable = "ignore"

[tool.ruff]
exclude = ["*"]

[tool.uv]
exclude-newer = "7 days"
